# ai-workshop

./: .env-example  agent.ipynb  agent.py  pyproject.toml  readme.md  setup.py
summarizer/: argparsing.py  git_cli.py  github_tools.py  main.py  prompts.py
