[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["Dolf <dnoordman@schubergphilis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"

[tool.poetry.group.agents.dependencies]
dspy-ai = "^2.6.2"
dspy = "^2.6.2"
mlflow = "^2.20.1"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
